## ~/src/Sandboxes/CMakeLists.txt

############################################################################
# CMakeLists for all sandbox applications
############################################################################

cmake_minimum_required(VERSION 3.20)

set(KmpleteSandboxResourcesFolder ${CMAKE_CURRENT_LIST_DIR}/Resources)

add_subdirectory(TriangleVulkan)